--- a/MotoSettings/AndroidManifest.xml
+++ b/MotoSettings/AndroidManifest.xml
@@ -12,8 +12,9 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:persistent="true">
-
+        android:persistent="true"
+        tools:replace="android:appComponentFactory">
+        
         <receiver android:name="com.moto.settings.BootCompletedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -41,7 +42,7 @@
                 android:name="com.android.settings.summary"
                 android:resource="@string/summary_empty" />
         </activity>
-
+        
     </application>
 
 </manifest>
