Add  tools:replace="android:appComponentFactory"
Fixes
Attribute application@appComponentFactory value=(androidx.core.app.CoreComponentFactory) from AndroidManifest.xml is also present at AndroidManifest.xml:android.support.v4.app.CoreComponentFactory).

--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:allowBackup="true"
         android:label="@string/moto_actions_title"
         android:icon="@mipmap/ic_launcher"
-        android:persistent="true">
+        android:persistent="true"
+        tools:replace="android:appComponentFactory">
 
         <receiver android:name="com.moto.actions.BootCompletedReceiver">
             <intent-filter>
