--- a/MotoSettings/AndroidManifest.xml
+++ b/MotoSettings/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:persistent="true">
+        android:persistent="true"
+        tools:replace="android:appComponentFactory">
 
         <receiver android:name="com.moto.settings.BootCompletedReceiver">
             <intent-filter>
