--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -752,7 +752,7 @@ on charger
     wait /dev/block/bootdevice/by-name/system
     mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
 
-    load_system_props
+#    load_system_props
 
     setprop persist.sys.usb.config mass_storage
 
